# LitRank

./: ImportanceEvaluation.ipynb  Popularity Calculation.md  TODO.txt  Test_WomenWriting.ipynb  TopicSelection.md  backend.py  pyproject.toml  readme.txt
EDA/: ImportanceEvaluation.ipynb  bieji.ipynb  ci_year_data.csv  flare.json  genre_year_data.csv  graph_json.json  graph_mainauthor.json  large_polygon.json  network_data1.json  network_data_withoutmain.json  pdf.ipynb  plot.py  polygon.json  relation.parquet  sankey_data.json  work.html  workpoempoetcount.json  workpoet.json  workpoet1.json  workpoetwithoutmain.json
MQWWfrontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
MQWWfrontend/src/: App.svelte  constants.js  output.css
MQWWfrontend/src/components/: ColumnStats.svelte  GenreTreeMap.svelte  MainCharts.svelte  MissingBar.svelte  PoemBlock.svelte  PoetBlock.svelte  PoetDefaultInspection.svelte  (+6 more)
datasets/: ChineseAcademy.csv  LiteracyLandscape.xlsx  MythologyFigures.xlsx  data_wrangling.ipynb
datasets/WomenWriting/: cycle.csv  cycle.parquet  cycle.xlsx  huwenkai.csv  poem.parquet  poempagelinks.csv  poempoetlinks.csv  poempoetlinks.parquet  poet.csv  poet.parquet  poet.xlsx  poetpagelinks.csv  poetregionlinks.csv  poetregionlinks.parquet  region.csv  region.parquet  relation.csv  subwork.csv  subwork.parquet  subworkpoemlinks.csv  subworkpoemlinks.parquet  subworkpoetlinks.csv  subworkpoetlinks.parquet  work.csv  work.parquet  workpoemlinks.csv  workpoemlinks.parquet  workpoetlinks.csv  workpoetlinks.parquet
